--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "*.embeddedhtml": "html",
-    "__locale": "cpp"
+    "__locale": "cpp",
+    "vector": "cpp",
+    "iosfwd": "cpp"
   }
 }
