All Nodes Distance K in Binary Tree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -111,6 +111,7 @@
     "typeinfo": "cpp",
     "unordered_map": "cpp",
     "variant": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "map": "cpp"
   }
 }
