--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
     "variant": "cpp",
     "algorithm": "cpp",
     "map": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "5_checkifanarrayrepresentsaminheap": "cpp"
   }
 }
